<resources>
    <string name="app_name">FirstApplication</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="to_currency">To Currency:</string>
    <string name="from_currency">From Currency:</string>
    <string name="currency_to_be_converted">Currency to be converted</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
</resources>
