<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_to_be_converted"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        />

        <EditText
            android:id="@+id/currency_to_be_converted"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="Enter Amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorAccent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_currency"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_spinner"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <Spinner
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:id="@+id/convert_from"
                android:layout_gravity="center"

                />
        </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_currency"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_spinner"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <Spinner
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:id="@+id/convert_to"
                android:layout_gravity="center"

                />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/convert"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/currency_converted"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Converted Amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

</LinearLayout>